config/static/styles/style.css
/** {*/
/*    margin: 0px;*/
/*    padding: 0px;*/
/*}*/

/* Default Layout */

html{
  background-color :rgb(255, 255, 255);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vmax;
}

body {
    background: url("/static/images/uoft_watermark.png") no-repeat;
    background-position: center center;
    background-origin: content-box;
    background-size: 35%;

    /*background-size: auto;*/

    height: 80vmax;
    width: 100%;
    font-family: 'Source Sans Pro', sans-serif;

}

/*For Sidebar*/
.wrapper{
    display: flex;
    width: 100%;
    align-items: stretch;
}


#basement{
    height:auto;
    min-height: 100%;
    padding-bottom: 10vh;
}

footer{
    height: 10vh;
    position: relative;
    transform: translateY(-100%);
}


/*Media Query*/
@media (max-width: 768px) {
    #sidebar {
        margin-left: -250px;
    }
    #sidebar.active {
        margin-left: 0;
    }
}

/*Test*/
p {
    font-family: 'Poppins', sans-serif;
    font-size: 1.1em;
    font-weight: 300;
    line-height: 1.7em;
    color: #999;
}

a, a:hover, a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}

a[data-toggle="collapse"] {
    position: relative;
}

.dropdown-toggle::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

.wrapper {
    display: flex;
    align-items: stretch;
}

#sidebar {
    min-width: 250px;
    max-width: 250px;
    background: #7386D5;
    color: #fff;
    transition: all 0.3s;
}

#sidebar .sidebar-header {
    padding: 20px;
    background: #6d7fcc;
}

#sidebar ul.components {
    padding: 20px 0;
    border-bottom: 1px solid #47748b;
}

#sidebar.active {
    margin-left: -250px;
}

#sidebar ul p {
    color: #fff;
    padding: 10px;
}

#sidebar ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
}
#sidebar ul li a:hover {
    color: #e3f2fd;
    background: #fff;
}

#sidebar ul li.active > a, a[aria-expanded="true"] {
    color: #fff;
    background: #e3f2fd;
}
ul ul a {
    font-size: 0.9em !important;
    padding-left: 30px !important;
    background: #6d7fcc;
}


/*---------*/

.uoft-footer {
    height: 10vh;
    padding: 1rem;
    background: #e3f2fd;
    display: flex;
    /*position: center;*/
    align-items: center;
    justify-content: center;
}
.topbar {
    position: fixed;
    height: 100px;
    width: 100vw;
    /*top: 0;*/
    /* width: 100% */
    /*left: 0;*/
    /*right: 0;*/
}

.p-t-10{
    padding-top: 10vh;
}

.content-bar{
    height: 70vh;
    width: 100vw;
}

.navbar {
    background-color: #e3f2fd;
}



/*.sidebar {*/
/*    font-family: 'Oxygen', sans-serif;*/
/*    position: fixed;*/
/*    !*margin-top: 50px;*!*/
/*    width: 25vw;*/
/*    min-width: 200px;*/
/*    height: 80%;*/
/*    background-color: #002554;*/
/*    !*padding: 30px 0;*!*/
/*    padding-top: 20vh;*/

/*}*/


/* Default Layout */


.sidebar h4 {
    color: white;
    text-transform: uppercase;
    text-align: center;
    margin-bottom: 30px;
}

.sidebar li {
    padding: 15px;
    border-bottom: 1px solid;
    border-bottom-width: 1px;
    border-bottom-color: #e3f2fd;
    border-top: 1px solid;
    font-size: 15px;
    text-align: center;
}

.toggle-btn {
    position: fixed;
    /*left: 12%;*/
    top: 15px;

}

.login-signup-box {
    position: absolute;
    top: 50px;
    right: 20px;
    margin: 20px;
}

.login-signup-box ul li {
    list-style-type: none;
    float: left;
    margin-left: 20px;
}



.foot-name {
    padding: 1rem;
}

footer h6 {
    text-color: white;
}

.social-icons {
    display: flex;
}

.social-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    cursor: pointer;
    margin: 0 0.5rem;
}

.social-icon--instagram {
    color: white;
}

.social-icon--linkedin {
    color: white;
}

